Fixed squished loading page

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -9,7 +9,7 @@
 @blue3: #2A558C;
 
 // Applies everywhere
-html{
+#fullpage, .section, html{
   height: 100%;
 }
 body{
